@@ -25,9 +25,7 @@ add_subdirectory( core-impl/collections )
 #don't use our own libplasma anymore, but still pick up our applets/engines/containments
 add_subdirectory( context )
 add_subdirectory( services )
-if( QTSCRIPTQTBINDINGS_FOUND )
-    add_subdirectory( scripts )
-endif( QTSCRIPTQTBINDINGS_FOUND )
+add_subdirectory( scripts )
 add_subdirectory( aboutdialog/libattica-ocsclient )
 add_subdirectory( transcoding )
 add_subdirectory( kconf_update )
